update post styled, individual post wordwrap fixed

--- a/react-app/src/components/Posts/AllPosts/AllPosts.css
+++ b/react-app/src/components/Posts/AllPosts/AllPosts.css
@@ -69,6 +69,7 @@
     font-size: 18px;
     font-weight: 600;
     word-wrap: break-word;
+    word-break: break-word;
     margin: 0px 8px;
     color: #222222;
 }
@@ -77,6 +78,8 @@
     font-size: 14px;
     color: #1c1c1c;
     margin: 8px 8px 0px;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .post-buttons {
